deployments/openshift/kustomize/base/hms-app/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: hms-app
spec:
  strategy:
    type: Rolling
  triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - hms-app
          from:
            kind: ImageStreamTag
            name: hms-app:develop-latest
            namespace: f15899-tools
        type: ImageChange
  replicas: 1
  selector:
    app: hms-app
  template:
    metadata:
      labels:
        app: hms-app
    spec:
      containers:
      - name: hms-app
        image: hms-app:latest
        ports:
        - containerPort: 5173
          protocol: TCP
        # envFrom:
        # - configMapRef:
        #     name: hms-app-configmap
        # - secretRef:
        #     name: hms-secrets
