deployments/openshift/kustomize/base/hms-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hms-app
spec:
  selector:
    app: hms-app
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
