deployments/openshift/kustomize/base/hms-app/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-hms-app
spec:
  podSelector:
    matchLabels:
      name: hms-app
  ingress:
    - {}
  policyTypes:
    - Ingress
